--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,4 +13,4 @@ jobs:
             - name: Install dependencies
               run: npm install
             - name: Test ESLint rules
-              run: node test.js
+              run: npm test
